[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2024"
name    = "napi-xattr"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "3"
napi-derive = "3"
xattr       = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
